Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,10 @@ steps:
   displayName: 'Write build info'
   workingDirectory: $(wwwrootDir)
 
+- task: NuGetToolInstaller@1
+  inputs:
+    versionSpec: '5.3.1'
+
 - task: NuGetCommand@2
   displayName: 'Restore project dependencies'
   inputs:
